\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{NEWS}
\title{glmmADMB News}
\encoding{UTF-8}

\section{Changes in version 0.7 (2011-12-18)}{
  \itemize{
    \item added R2admb dependency, removed copies of R2admb files
    \item improved vignette (hurdle and MCMC)
    \item improved labeling of MCMC output
  }
}
  
\section{Changes in version 0.6.7.1 (2011-12-05)}{
  \itemize{
    \item SVN rev 158
    \item added debug flag, debugging statements
    \item attempt to avoid temporary-directory collisions
    \item TPL file adds truncated Poisson and negative binomial
    \item update saved OwlModel
    \item added 'run' option to admbControl
    \item fixed predict bug (remove LHS)
    \item fix problems with calculating sd.est for models other than
  Bernoulli, Poisson, NB
  }
}

\section{Changes in version 0.6.6 (2011-11-23)}{
  \itemize{
    \item SVN rev 147
    \item add identity, cloglog links
    \item stub for gaussian family (not yet working!)
    \item use tolower() on family
    \item add (experimental) predict() function
    \item comment on easyFlag
    \item move ZI_kluge to admbControl
    \item fix name assignment bug for random effect levels
    
  }
}
  
\section{Changes in version 0.6.5 (2011-10-22)}{
  \itemize{
    \item SVN rev 142
    \item BRANCH MERGE with alpha version
    \item added mcmcControl, admbControl
    \item added shess, noinit options (poorly documented)
    \item added scapeMCMC, ggplot2 to Suggests: (the latter for vignette use)
  }
}

\section{Changes in version 0.6.4 (2011-08-30)}{
  \itemize{
    \item new binaries
  }
}

\section{Changes in version 0.6.3 (2011-08-08)}{
  \itemize{
    \item include more buildbot binaries
    \item added nbinom1 option
    \item fixed phase bugs in nbinom
  }
}

\section{Changes in version 0.6.2}{
  \itemize{
    \item include sd of zero-inflation in output and summary
    \item include buildbot binaries
    \item more information when failing to find binaries
  }
}
